commit Frontend Home Page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,8 +12,8 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="../css/fruit.css">
     <link rel="stylesheet" href="1.js">
+    <link href="../Frontend/css/fruit.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
@@ -41,12 +41,12 @@
             </div>
         </div>
         <div class="col-md-3">
-            <img src="../img/logo-desktop.jpg" alt="">
+            <img src="../Frontend/images/logo-desktop.jpg" alt="">
         </div>
         <div class="col-md-2">
             <div class="row1">
                 <i class="fa fa-user" aria-hidden="true" style="color: #D57E67;"></i>
-                <span><a href="../html/login.html" style="color: black;">Đăng nhập</a></span>
+                <span><a href="images/login.html" style="color: black;">Đăng nhập</a></span>
             </div>
             <div class="row2" style="margin-top: 40px;">
                 <i class="fa fa-heart-o" aria-hidden="true" style="color: #D57E67;"></i>
@@ -99,13 +99,13 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../img/slide 4.jpg" alt="Cheery">
+                <img src="../Frontend/images/slide 4.jpg" alt="Cheery">
             </div>
             <div class="carousel-item ">
-                <img src="../img/slide1.jpg" alt="Nho">
+                <img src="../Frontend/images/slide1.jpg" alt="Nho">
             </div>
             <div class="carousel-item">
-                <img src="../img/slide2.jpg" alt="Nhotim">
+                <img src="../Frontend/images/slide2.jpg" alt="Nhotim">
             </div>
         </div>
 
@@ -144,29 +144,28 @@
     <div class="container-fluid">
         <div class="row" style="padding-top: 50px;">
             <div class="col-md-2">
-                <img width="200px" height="133px" src="../img/danhmuc1.jpg" alt=" ">
-                <p><img width="200px" height="133px" src="../img/berry.png" alt="" style="padding-top: 20px;"></p>
-            </div>
-
-            <div class="col-md-2">
-                <img width="200px" height="133px" src="../img/cheery.png" alt=" ">
-                <p><img width="200px" height="133px" src="../img/Cam.png" alt="" style="padding-top: 20px;"></p>
+                <img width="200px" height="133px" src="../Frontend/images/danhmuc1.jpg" alt=" ">
+                <p><img width="200px" height="133px" src="../Frontend/images/berry.png" alt="" style="padding-top: 20px;"></p>
             </div>
             <div class="col-md-2">
-                <img width="200px" height="133px" src="../img/nho.png" alt=" ">
-                <p><img width="200px" height="133px" src="../img/detox.png" alt="" style="padding-top: 20px;"></p>
+                <img width="200px" height="133px" src="../Frontend/images/cheery.png" alt=" ">
+                <p><img width="200px" height="133px" src="../Frontend/images/Cam.png" alt="" style="padding-top: 20px;"></p>
+            </div>
+            <div class="col-md-2">
+                <img width="200px" height="133px" src="../Frontend/images/nho.png" alt=" ">
+                <p><img width="200px" height="133px" src="../Frontend/images/detox.png" alt="" style="padding-top: 20px;"></p>
             </div>
             <div class="col-md-2"><img width="200px" height="133px" src="tao.png" alt=" ">
-                <p><img width="200px" height="133px" src="../img/Traicaynhietdoi.png" alt="" style="padding-top: 20px;">
+                <p><img width="200px" height="133px" src="../Frontend/images/Traicaynhietdoi.png" alt="" style="padding-top: 20px;">
                 </p>
             </div>
             <div class="col-md-2">
-                <img width="200px" height="133px" src="../img/lê.png" alt=" ">
-                <p><img width="200px" height="133px" src="../img/Traicaykho.png" alt="" style="padding-top: 20px;"></p>
+                <img width="200px" height="133px" src="../Frontend/images/lê.png" alt=" ">
+                <p><img width="200px" height="133px" src="../Frontend/images/Traicaykho.png" alt="" style="padding-top: 20px;"></p>
             </div>
             <div class="col-md-2">
-                <img width="200px" height="133px" src="../img/hồng.png" alt=" ">
-                <p><img width="200px" height="133px" src="../img/traicaydonglanh.png" alt="" style="padding-top: 20px;">
+                <img width="200px" height="133px" src="../Frontend/images/hồng.png" alt=" ">
+                <p><img width="200px" height="133px" src="../Frontend/images/traicaydonglanh.png" alt="" style="padding-top: 20px;">
                 </p>
             </div>
         </div>
@@ -174,7 +173,7 @@
 
 
     <div class="anh" style="padding-top:40px;">
-        <img src="../img/flash-sales.png" alt="" style="margin-left: 400px;">
+        <img src="../Frontend/images/flash-sales.png" alt="" style="margin-left: 400px;">
     </div>
 
     <div class="container" style="padding-top: 50px;">
@@ -182,7 +181,7 @@
 
 
             <div class="col">
-                <img src="../img/flash1.jpg" alt="">
+                <img src="../Frontend/images/flash1.jpg" alt="">
                 <a href="">
                     <h6>Nho Adora Uc</h6>
                 </a>
@@ -198,7 +197,7 @@
                 </div>
             </div>
             <div class="col">
-                <img src="../img/flash2.jpg" alt="">
+                <img src="../Frontend/images/flash2.jpg" alt="">
                 <a href="">
                     <h6>Kiwi New Zealand</h6>
                 </a>
@@ -214,7 +213,7 @@
                 </div>
             </div>
             <div class="col">
-                <img src="../img/flash3.jpg" alt="">
+                <img src="../Frontend/images/flash3.jpg" alt="">
                 <a href="">
                     <h6>Nho Medoly Uc</h6>
                 </a>
@@ -230,7 +229,7 @@
                 </div>
             </div>
             <div class="col">
-                <img src="../img/flash4.jpg" alt="">
+                <img src="../Frontend/images/flash4.jpg" alt="">
                 <a href="">
                     <h6>Quýt Ai Cập</h6>
                 </a>
@@ -246,7 +245,7 @@
                 </div>
             </div>
             <div class="col">
-                <img src="../img/flash5.jpeg" alt="">
+                <img src="../Frontend/images/flash5.jpeg" alt="">
                 <a href="">
                     <h6>Nho đen Midnight Beauty</h6>
                 </a>
@@ -266,10 +265,10 @@
 
     <div class="baner">
         <div class="baner1">
-            <img src="../img/BANER1.jpg" alt="">
+            <img src="../Frontend/images/BANER1.jpg" alt="">
         </div>
         <div class="baner2">
-            <img src="../img/baner2.jpg" alt="" style="margin-left: 30px ;">
+            <img src="../Frontend/images/baner2.jpg" alt="" style="margin-left: 30px ;">
         </div>
     </div>
 
@@ -298,7 +297,7 @@
 
     <div class="product">
         <div class="col1">
-            <img src="../img/flash1.jpg" alt="">
+            <img src="../Frontend/images/flash1.jpg" alt="">
             <a href="">
                 <h6>Nho Adora Uc</h6>
             </a>
@@ -314,7 +313,7 @@
             </div>
         </div>
         <div class="col1">
-            <img src="../img/flash3.jpg" alt="">
+            <img src="../Frontend/images/flash3.jpg" alt="">
             <a href="">
                 <h6>Kiwi New Zealand</h6>
             </a>
@@ -330,7 +329,7 @@
             </div>
         </div>
         <div class="col1">
-            <img src="../img/nhoxanh.jpg" alt="">
+            <img src="../Frontend/images/nhoxanh.jpg" alt="">
             <a href="">
                 <h6>Nho Medoly Uc</h6>
             </a>
@@ -347,7 +346,7 @@
         </div>
 
         <div class="col1">
-            <img src="../img/nhosweet.jpg" alt="">
+            <img src="../Frontend/images/nhosweet.jpg" alt="">
             <a href="">
                 <h6>Nho đen Midnight Beauty</h6>
             </a>
@@ -390,7 +389,7 @@
 
     <div class="product">
         <div class="col1">
-            <img src="../img/táo beauty.jpg" alt="">
+            <img src="../Frontend/images/táo beauty.jpg" alt="">
             <a href="">
                 <h6>Nho Adora Uc</h6>
             </a>
@@ -406,7 +405,7 @@
             </div>
         </div>
         <div class="col1">
-            <img src="../img/táo sample.jpg" alt="">
+            <img src="../Frontend/images/táo sample.jpg" alt="">
             <a href="">
                 <h6>Kiwi New Zealand</h6>
             </a>
@@ -422,7 +421,7 @@
             </div>
         </div>
         <div class="col1">
-            <img src="../img/tao koru.jpg" alt="">
+            <img src="../Frontend/images/tao koru.jpg" alt="">
             <a href="">
                 <h6>Nho Medoly Uc</h6>
             </a>
@@ -439,7 +438,7 @@
         </div>
 
         <div class="col1">
-            <img src="../img/tao cosmic.jpg" alt="">
+            <img src="../Frontend/images/tao cosmic.jpg" alt="">
             <a href="">
                 <h6>Nho đen Midnight Beauty</h6>
             </a>
@@ -481,7 +480,7 @@
 
     <div class="product">
         <div class="col1">
-            <img src="../img/le cheeky.jpg" alt="">
+            <img src="../Frontend/images/le cheeky.jpg" alt="">
             <a href="">
                 <h6>Nho Adora Uc</h6>
             </a>
@@ -497,7 +496,7 @@
             </div>
         </div>
         <div class="col1">
-            <img src="../img/le forelle.jpg" alt="">
+            <img src="../Frontend/images/le forelle.jpg" alt="">
             <a href="">
                 <h6>Kiwi New Zealand</h6>
             </a>
@@ -513,7 +512,7 @@
             </div>
         </div>
         <div class="col1">
-            <img src="../img/le singo.jpg" alt="">
+            <img src="../Frontend/images/le singo.jpg" alt="">
             <a href="">
                 <h6>Nho Medoly Uc</h6>
             </a>
@@ -534,19 +533,19 @@
 
     <div class="end1">
         <div class="vanchuyen">
-            <img src="../img/xe.png" alt="">
+            <img src="../Frontend/images/xe.png" alt="">
             <span>MIỄN Phí VẬN CHUYỂN</span>
         </div>
         <div class="vanchuyen">
-            <img src="../img/chungnhan.png" alt="">
+            <img src="../Frontend/images/chungnhan.png" alt="">
             <span>CHỨNG NHẬN CHẤT LƯỢNG</span>
         </div>
         <div class="vanchuyen">
-            <img src="../img/hoantien.png" alt="">
+            <img src="../Frontend/images/hoantien.png" alt="">
             <span>HOÀN TIỀN SẢN PHẨM LỖI</span>
         </div>
         <div class="vanchuyen">
-            <img src="../img/tuvan.png" alt="">
+            <img src="../Frontend/images/tuvan.png" alt="">
             <span>TƯ VẤN SẢN PHẨM MIỄN PHÍ</span>
         </div>
     </div>
