--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -46,7 +46,10 @@
         <div class="col-md-2">
             <div class="row1">
                 <i class="fa fa-user" aria-hidden="true" style="color: #D57E67;"></i>
-                <span><a href="images/login.html" style="color: black;">Đăng nhập</a></span>
+                <span><a href="/login" style="color: black;">Đăng nhập</a></span>
+
+                <i class="fa fa-user" aria-hidden="true" style="color: #D57E67;"></i>
+                <span><a href="/register" style="color: black;">Đăng ký</a></span>
             </div>
             <div class="row2" style="margin-top: 40px;">
                 <i class="fa fa-heart-o" aria-hidden="true" style="color: #D57E67;"></i>
@@ -69,7 +72,7 @@
     <div class="menu">
         <ul class="menu">
 
-            <li><a href="../html/fruit.html">TRANG CHỦ</a></li>
+            <li><a href="/home">TRANG CHỦ</a></li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">TRÁI CÂY TƯƠI</a>
                 <div class="dropdown-menu">
