--- a/src/main/resources/templates/admin/Employee.html
+++ b/src/main/resources/templates/admin/Employee.html
@@ -76,14 +76,66 @@
 
             </div>
         </div>
-
     </nav>
 
     <article>
-        <div class="background">
-            <img src="../img/slide2.jpg" alt="">
+
+        <h2>List Employee</h2>
+        <div class="select">
+            <a href="../html/addEmployee.html" class="btn btn-default" style="background-color:rgb(152, 160, 152);">Add Employee</a>
+
 
         </div>
+        <hr>
+        <table class="table table-bordered">
+            <thead>
+            <tr style="background-color: rgb(238, 235, 235);">
+                <th style="width:100px;">Name</th>
+                <th style="width:150px;">Number Phone</th>
+                <th style="width:300px;">Address</th>
+                <th style="width:300px;">Bank Account</th>
+                <th >ID card</th>
+            </tr>
+            <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            </tbody>
+            </thead>
+        </table>
 
 
 
