--- a/src/main/resources/templates/common/giotraicay.html
+++ b/src/main/resources/templates/common/giotraicay.html
@@ -12,7 +12,7 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="../css/fruit.css">
+    <link rel="stylesheet" href="../Frontend/css/fruit.css">
     <link rel="stylesheet" href="1.js">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -32,19 +32,19 @@
                   style="color:#D57E67 ;">Chào mừng bạn đến với Thật Fruit|Hotline:0981 992 352</span>
             <div class="form-group" style="width:300px ;">
                 <label for=""> </label>
-                <input type="text" class="form-control" name="search" id="" aria-describedby="helpId"
+                <input type="text" class="form-control" name="search" id="a" aria-describedby="helpId"
                        placeholder="Tìm kiếm...">
                 <small id="helpId" class="form-text text-muted"></small>
 
             </div>
         </div>
         <div class="col-md-3">
-            <img src="../img/logo-desktop.jpg" alt="">
+            <img src="../Frontend/images/logo-desktop.jpg" alt="">
         </div>
         <div class="col-md-2">
             <div class="row1">
                 <i class="fa fa-user" aria-hidden="true" style="color: #D57E67;"></i>
-                <span><a href="../html/login.html" style="color: black;">Đăng nhập</a></span>
+                <span><a href="../login.html" style="color: black;">Đăng nhập</a></span>
             </div>
             <div class="row2" style="margin-top: 40px;">
                 <i class="fa fa-heart-o" aria-hidden="true" style="color: #D57E67;"></i>
@@ -112,7 +112,7 @@
 
     <div class="product">
         <div class="col1">
-            <img src="../img/giohoaqua.jpg" alt="">
+            <img src="../Frontend/images/giohoaqua.jpg" alt="">
             <a href="">
                 <h6>Giỏ 1</h6>
             </a>
@@ -128,7 +128,7 @@
             </div>
         </div>
         <div class="col1">
-            <img src="../img/gio2.jpg" alt="">
+            <img src="../Frontend/images/gio2.jpg" alt="">
             <a href="">
                 <h6>Giỏ 2</h6>
             </a>
@@ -144,7 +144,7 @@
             </div>
         </div>
         <div class="col1">
-            <img src="../img/gio3.jpg" alt="">
+            <img src="../Frontend/images/gio3.jpg" alt="">
             <a href="">
                 <h6>Giỏ 3</h6>
             </a>
@@ -161,7 +161,7 @@
         </div>
 
         <div class="col1">
-            <img src="../img/gio4.jpg" alt="">
+            <img src="../Frontend/images/gio4.jpg" alt="">
             <a href="">
                 <h6>Giỏ 4</h6>
             </a>
@@ -183,7 +183,7 @@
 
         <div class="product">
             <div class="col1">
-                <img src="../img/gio5.jpg" alt="">
+                <img src="../Frontend/images/gio5.jpg" alt="">
                 <a href="">
                     <h6>Giỏ 5</h6>
                 </a>
@@ -199,7 +199,7 @@
                 </div>
             </div>
             <div class="col1">
-                <img src="../img/gio6.jpg" alt="">
+                <img src="../Frontend/images/gio6.jpg" alt="">
                 <a href="">
                     <h6>Giỏ 6</h6>
                 </a>
@@ -215,7 +215,7 @@
                 </div>
             </div>
             <div class="col1">
-                <img src="../img/gio8.jpg" alt="">
+                <img src="../Frontend/images/gio8.jpg" alt="">
                 <a href="">
                     <h6>Giỏ 7</h6>
                 </a>
@@ -232,7 +232,7 @@
             </div>
 
             <div class="col1">
-                <img src="../img/gio5.jpg" alt="">
+                <img src="../Frontend/images/gio5.jpg" alt="">
                 <a href="">
                     <h6>Giỏ 8</h6>
                 </a>
@@ -252,19 +252,19 @@
 
         <div class="end1">
             <div class="vanchuyen">
-                <img src="../img/xe.png" alt="">
+                <img src="../Frontend/images/xe.png" alt="">
                 <span>MIỄN Phí VẬN CHUYỂN</span>
             </div>
             <div class="vanchuyen">
-                <img src="../img/chungnhan.png" alt="">
+                <img src="../Frontend/images/chungnhan.png" alt="">
                 <span>CHỨNG NHẬN CHẤT LƯỢNG</span>
             </div>
             <div class="vanchuyen">
-                <img src="../img/hoantien.png" alt="">
+                <img src="../Frontend/images/hoantien.png" alt="">
                 <span>HOÀN TIỀN SẢN PHẨM LỖI</span>
             </div>
             <div class="vanchuyen">
-                <img src="../img/tuvan.png" alt="">
+                <img src="../Frontend/images/tuvan.png" alt="">
                 <span>TƯ VẤN SẢN PHẨM MIỄN PHÍ</span>
             </div>
         </div>
