--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -34,7 +34,7 @@
                   style="color:#D57E67 ;">Chào mừng bạn đến với Thật Fruit|Hotline:0981 992 352</span>
             <div class="form-group" style="width:300px ;">
                 <label for=""> </label>
-                <input type="text" class="form-control" name="search" id="" aria-describedby="helpId"
+                <input type="text" class="form-control" name="search" id="a" aria-describedby="helpId"
                        placeholder="Tìm kiếm...">
                 <small id="helpId" class="form-text text-muted"></small>
 
@@ -84,7 +84,7 @@
                     </ul>
                 </div>
             </li>
-            <li><a href="../html/giotraicay.html">GIỎ TRÁI CÂY</a></li>
+            <li><a href="../common/giotraicay.html">GIỎ TRÁI CÂY</a></li>
             <li><a href="">NƯỚC DETOX</a></li>
             <li><a href="">TIN TỨC</a></li>
             <li><a href="">LIÊN HỆ</a></li>
@@ -102,7 +102,7 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../Frontend/images/slide 4.jpg" alt="Cheery">
+                <img src="../Frontend/images/slide4.jpg" alt="Cheery">
             </div>
             <div class="carousel-item ">
                 <img src="../Frontend/images/slide1.jpg" alt="Nho">
@@ -163,11 +163,11 @@
                 </p>
             </div>
             <div class="col-md-2">
-                <img width="200px" height="133px" src="../Frontend/images/lê.png" alt=" ">
+                <img width="200px" height="133px" src="../Frontend/images/le.png" alt=" ">
                 <p><img width="200px" height="133px" src="../Frontend/images/Traicaykho.png" alt="" style="padding-top: 20px;"></p>
             </div>
             <div class="col-md-2">
-                <img width="200px" height="133px" src="../Frontend/images/hồng.png" alt=" ">
+                <img width="200px" height="133px" src="../Frontend/images/hong.png" alt=" ">
                 <p><img width="200px" height="133px" src="../Frontend/images/traicaydonglanh.png" alt="" style="padding-top: 20px;">
                 </p>
             </div>
@@ -392,7 +392,7 @@
 
     <div class="product">
         <div class="col1">
-            <img src="../Frontend/images/táo beauty.jpg" alt="">
+            <img src="../Frontend/images/taobeauty.jpg" alt="">
             <a href="">
                 <h6>Nho Adora Uc</h6>
             </a>
@@ -408,7 +408,7 @@
             </div>
         </div>
         <div class="col1">
-            <img src="../Frontend/images/táo sample.jpg" alt="">
+            <img src="../Frontend/images/taosample.jpg" alt="">
             <a href="">
                 <h6>Kiwi New Zealand</h6>
             </a>
@@ -424,7 +424,7 @@
             </div>
         </div>
         <div class="col1">
-            <img src="../Frontend/images/tao koru.jpg" alt="">
+            <img src="../Frontend/images/taokoru.jpg" alt="">
             <a href="">
                 <h6>Nho Medoly Uc</h6>
             </a>
@@ -441,7 +441,7 @@
         </div>
 
         <div class="col1">
-            <img src="../Frontend/images/tao cosmic.jpg" alt="">
+            <img src="../Frontend/images/taocosmic.jpg" alt="">
             <a href="">
                 <h6>Nho đen Midnight Beauty</h6>
             </a>
@@ -499,7 +499,7 @@
             </div>
         </div>
         <div class="col1">
-            <img src="../Frontend/images/le forelle.jpg" alt="">
+            <img src="../Frontend/images/leforelle.jpg" alt="">
             <a href="">
                 <h6>Kiwi New Zealand</h6>
             </a>
@@ -515,7 +515,7 @@
             </div>
         </div>
         <div class="col1">
-            <img src="../Frontend/images/le singo.jpg" alt="">
+            <img src="../Frontend/images/lesingo.jpg" alt="">
             <a href="">
                 <h6>Nho Medoly Uc</h6>
             </a>
