--- a/src/main/resources/templates/staff/ListProduct.html
+++ b/src/main/resources/templates/staff/ListProduct.html
@@ -76,14 +76,100 @@
 
             </div>
         </div>
-
     </nav>
 
     <article>
-        <div class="background">
-            <img src="../img/slide2.jpg" alt="">
 
+        <h2>List Product</h2>
+        <div class="select">
+            <a href="../html/addProduct.html" class="btn btn-default" style="background-color:rgb(152, 160, 152);">Add Product</a>
         </div>
+        <hr>
+        <table class="table table-bordered">
+            <thead>
+            <tr style="background-color: rgb(238, 235, 235);">
+                <th style="width:100px;">Image</th>
+                <th style="width:100px;">Name</th>
+                <th style="width:400px;">Description</th>
+                <th style="width:100px;">Price</th>
+                <th style="width:100px;">Mount</th>
+                <th >Status</th>
+                <th></th>
+
+
+            </tr>
+            <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+                <td>
+                    <a href="../html/EditProduct.html"><button type="button" id="plus2"><i class="fa fa-edit" aria-hidden="true"></i></button></a>
+                    <button type="button" id="X" ><i class="fa fa-times" aria-hidden="true"></i></button>
+                </td>
+
+
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+                <td>
+                    <a href="../html/EditProduct.html"><button type="button" id="plus2"><i class="fa fa-edit" aria-hidden="true"></i></button></a>
+                    <button type="button" id="X" ><i class="fa fa-times" aria-hidden="true"></i></button>
+                </td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+                <td>
+                    <a href="../html/EditProduct.html"></a><button type="button" id="plus2"><i class="fa fa-edit" aria-hidden="true"></i></button></a>
+                    <button type="button" id="X" ><i class="fa fa-times" aria-hidden="true"></i></button>
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+                <td>
+                    <a href="../html/EditProduct.html"></a><button type="button" id="plus2"><i class="fa fa-edit" aria-hidden="true"></i></button></a>
+                    <button type="button" id="X" ><i class="fa fa-times" aria-hidden="true"></i></button>
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+                <td>
+                    <a href="../html/EditProduct.html"></a><button  type="button" id="plus2"><i class="fa fa-edit" aria-hidden="true"></i></button></a>
+                    <button type="button" id="X" ><i class="fa fa-times" aria-hidden="true"></i></button>
+                </td>
+            </tr>
+            </tbody>
+            </thead>
+        </table>
 
 
 
