--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link href="../Frontend/css/register.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/Register.css">
 </head>
 <body>
 <form action="">
@@ -25,7 +25,7 @@
         <br>
         <button class="in1 in2" type="submit">Register</button>
         <br>
-        <a href="login.html">Click here to Login</a>
+        <a href="../html/login.html">Click here to Login</a>
     </div>
 </form>
 <script src="/jquery-3.5.1.min.js"></script>
