--- a/src/main/resources/templates/admin/ListUser.html
+++ b/src/main/resources/templates/admin/ListUser.html
@@ -46,7 +46,7 @@
                 <div class="" id="sidebar">
                     <ul class="nav nav-pills flex-column">
                         <li class="nav-item"><a class="list-group-item list-group-item-action" href="../html/ListProduct.html">Products</a></li>
-                        <li class="nav-item"><a class="list-group-item list-group-item-action" href="../html/ListUser.html">Customers</a></li>
+                        <li class="nav-item"><a class="list-group-item list-group-item-action" href="#">Customers</a></li>
                         <li class="nav-item"><a class="list-group-item list-group-item-action" href="../html/Employee.html">Employees</a></li>
                         <li class="nav-item"><a class="list-group-item list-group-item-action" href="#">Reports</a></li>
 
@@ -76,14 +76,64 @@
 
             </div>
         </div>
-
     </nav>
 
     <article>
-        <div class="background">
-            <img src="../img/slide2.jpg" alt="">
 
+        <h2>List Customer</h2>
+        <div class="select">
+            <a href="../html/addProduct.html" class="btn btn-default" style="background-color:rgb(152, 160, 152);">Add Product</a>
         </div>
+        <hr>
+        <table class="table table-bordered">
+            <thead>
+            <tr style="background-color: rgb(238, 235, 235);">
+
+                <th style="width:300px;">Name</th>
+
+                <th style="width:500px;">Address</th>
+
+                <th >Number_Phone</th>
+
+
+
+            </tr>
+            <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            </tbody>
+            </thead>
+        </table>
 
 
 
