commit chuc nang dang ki tai khoan

--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="../css/Register.css">
+    <link rel="stylesheet" href="../Frontend/css/Register.css">
 </head>
 <body>
-<form action="">
+<div><p class="login-box-msg" th:text="${status} ? ${status} : 'Vui lòng nhập đầy đủ thông tin' "
+        style="color: red"></p></div>
+
+<form th:action="@{/register}" th:object="${account}" method="post">
     <div class="div1">
         <h3 style="font-size: 17px; margin-left: 25px;">Register</h3>
     </div>
     <div class="div2" style="margin-bottom: 20px;">
-        <input class="in1"  type="text" placeholder="Username">
+        <input class="in1"  type="text" th:field="*{username}" placeholder="Username">
+        <label th:text="${errusername}" style="color: #ff0000;"></label>
         <br>
-        <input class="in1"  type="email" placeholder="E-mail">
+        <input class="in1"  type="email" th:field="*{email}" placeholder="E-mail">
+        <label th:text="${erremail}" style="color:red;"></label>
         <br>
-        <input class="in1" type="password" placeholder="Password">
+        <input class="in1" type="password" th:field="*{password}" placeholder="Password">
+
         <br>
         <input class="in1" type="password" placeholder="Re Password">
         <br>
@@ -25,7 +31,7 @@
         <br>
         <button class="in1 in2" type="submit">Register</button>
         <br>
-        <a href="../html/login.html">Click here to Login</a>
+        <a href="login.html">Click here to Login</a>
     </div>
 </form>
 <script src="/jquery-3.5.1.min.js"></script>
