--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../Frontend/css/login.css">
 </head>
 <body>
 
-<form action="">
+<form th:action="@{/login}" method="post">
     <div class="div1">
         <h3 style="font-size: 17px; margin-left: 25px;">Please Sign In</h3>
     </div>
