--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@
         </div>
         <div class="col-md-4">
             <span class="text-center"
-                  style="color:#D57E67 ;">Chào mừng bạn đến với Thật Fruit|Hotline:0981 992 352</span>
+                  style="color:#D57E67 ;">Chào mừng bạn đến với Thật Fruit|Hotline:0123456789</span>
             <div class="form-group" style="width:300px ;">
                 <label for=""> </label>
                 <input type="text" class="form-control" name="search" id="a" aria-describedby="helpId"
