commit front end

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -46,10 +46,10 @@
         <div class="col-md-2">
             <div class="row1">
                 <i class="fa fa-user" aria-hidden="true" style="color: #D57E67;"></i>
-                <span><a href="/login" style="color: black;">Đăng nhập</a></span>
+                <span><a th:href="@{/login}" style="color: black;">Đăng nhập</a></span>
 
                 <i class="fa fa-user" aria-hidden="true" style="color: #D57E67;"></i>
-                <span><a href="/register" style="color: black;">Đăng ký</a></span>
+                <span><a th:href="@{/register}" style="color: black;">Đăng ký</a></span>
             </div>
             <div class="row2" style="margin-top: 40px;">
                 <i class="fa fa-heart-o" aria-hidden="true" style="color: #D57E67;"></i>
