--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -31,7 +31,7 @@
         <br>
         <button class="in1 in2" type="submit">Register</button>
         <br>
-        <a href="login.html">Click here to Login</a>
+        <a href="/login">Click here to Login</a>
     </div>
 </form>
 <script src="/jquery-3.5.1.min.js"></script>
